# SmallPaceRunFast

./: .gitignore  README.md
docs/: progress.md  (+8 more)
smartPi/smartdev-agent/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
smartPi/smartdev-agent/docs/: development-progress.md  next-phase-code-intelligence.md  phase-10-design.md  phase-11-design.md  phase-11b-design.md  phase-11c-design.md  phase-11d-design.md  phase-6.3-design.md  phase-7-design.md  phase-8-design.md  phase-9-design.md
smartPi/smartdev-agent/scripts/: verify_gateway.py
smartPi/smartdev-agent/smartdev/: __init__.py  __main__.py  cli.py  models.py
smartPi/smartdev-agent/tests/: test_adapter.py  test_architecture_map.py  test_artifact_extractor.py  test_cli.py  test_code_apply.py  test_code_impact.py  test_code_patch.py  test_code_rollback.py  test_code_search.py  test_detectors.py  test_doc_consistency.py  test_doc_generate.py  test_doc_map.py  test_doc_patch_propose.py  test_doc_update_plan.py  test_gate_authority.py  test_gate_check.py  test_gate_cli_e2e.py  test_git_commit_command.py  test_git_commit_plan.py  test_git_diff_explain.py  test_git_release_plan.py  test_git_service.py  test_git_status.py  test_go_extraction.py  test_go_full_pipeline.py  test_graph_validator.py  test_guard_budget.py  test_guard_dependency.py  test_guard_dev.py  test_guard_diff_explain.py  test_guard_runner.py  test_guard_security.py  test_handoff_code.py  test_handoff_doc.py  test_handoff_review.py  test_impact_import_relations.py  test_import_relations.py  test_index_store.py  test_js_ts_full_pipeline.py  (+34 more)
(+213 files in other folders)
